modules/gdscript/tests/scripts/parser/errors/struct_with_function.gd
struct InvalidStruct:
	var a: int
	func do_something():
		pass

func test():
	pass
